style fix for header spacing on mobile

--- a/src/components/header.scss
+++ b/src/components/header.scss
@@ -29,6 +29,10 @@
     justify-content: space-evenly;
     margin-left: 50px;
     // border: 1px solid white;
+    @media (max-width: 500px) {
+      margin-left: 0;
+      width: 100%;
+    }
 
     img {
       width: 75px;
